# vfd

./: Makefile.am  Makefile.in  README.md  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2  traces.3
include/: base.h  config.h  config.h.in  config.h.in~  hardware.h
src/: Makefile.am  Makefile.in  vfd.c
src/.deps/: vfd-vfd.Po  vfd.Po
